	  PAM connections are unsafe and now disabled by default.
	- Bug #795: German ERR_DNS_FAIL correction
	- Bug #803: Lithuantian error messages update
	- Bug #806: Segfault if failing to load error page
	- Bug #812: Mozilla/Netscape plugins mime type defined (.xpi)
	- Bug #817: maximum_object_size too large causes squid not to cache
	- Bug #799: positive_dns_ttl ignored when using internal DNS.

Changes to squid-2.5.STABLE4 (15 Sep 2003):

	- Lithuanian error messages added to the distribution
	- Bug #660: segfauld if more than one custom deny_info line
	- cache_dir disd documentation cleanup
	- check open of /dev/null to avoid 100% CPU loop in badly
	  configured chroot environments
	- documentation update on uri_whitespace to refer to the correct RFC
	- Bug #655: icmpRecv: recv: (11) Resource temporarily unavailable
	- Bug #683: external_acl does not wait for ident lookups to complete
	- aufs: Fix a minor use-after-free problem which could cause the
	  count of opening filedescriptors to grow larger than it should
	- Syntax changes to make GCC-3.3 accept Squid without complaints
	- Warning if CARP server defined in incorrect load factor order
	- neighbor_type_domain documentation update
	- http_header_access now works when using cache peers
	- high_memory_warning now uses sbrk as fallback mechanism on
	  platforms where neither mallinfo or mstats are available.
	- hosts_file now handles comments at the end of lines correcly
	- storeCheckCachable() Stats corrected for release_request and
	  wrong_content_length.
	- cachePeerPingsSent MIB type corrected
	- unused minimum_retry_timeout directive removed
	- Bug #702: ERR_TO_BIG spanish translation
	- Bug #705: Memory leak on deny_info TCP_RESET
	- Code cleanup to fix compile error in httpHeaderDelById
	- Bug #699: Host header now forwarded exactly where it was in the
	  original request to work around certain broken firewalls or
	  load balancers which fail if this header is too far into the
	  request headers.