@@ -14,6 +14,8 @@ Changes to squid-2.5.STABLE5 (not yet released):
 	- Bug #812: Mozilla/Netscape plugins mime type defined (.xpi)
 	- Bug #817: maximum_object_size too large causes squid not to cache
 	- Bug #799: positive_dns_ttl ignored when using internal DNS.
+	- Bug #14: attempts to establish connection may look like syn flood
+	  attack if the contacted server is refusing connections
 
 Changes to squid-2.5.STABLE4 (15 Sep 2003):
 
